form alignment ui fix

--- a/src/app/main/resources/forms/forms.component.scss
+++ b/src/app/main/resources/forms/forms.component.scss
@@ -75,7 +75,7 @@ strong {
 .container-fluid {
   max-width: 900px;
   width: 94%;
-  margin-left: 3%;
+  margin-left: 0;
   //max-height: 900px;
   height: auto;
 }
